# Kiosk

./: .gitignore  Design_Document.md  README.md  build.bat  build.sh  dev.bat  dev.sh  index.html  install.bat  install.sh  package-lock.json  package.json  release.bat  release.sh  tsconfig.json  vite.config.js
src/: main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src/apps/: coreApps.ts
src/components/: AppRegistry.ts  Desktop.ts  Taskbar.ts  WindowManager.ts
src/styles/: main.css
src/types/: index.ts
src/utils/: api.ts
