[package]
name = "kiosk"
version = "0.1.0"
description = "Windows 2000 style kiosk application for Raspberry Pi"
authors = ["Kiosk Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "kiosk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
chrono = "0.4"

# TODO: Add these plugins as needed for future phases
# tauri-plugin-pty = "0.1"  # Terminal emulator support
# tokio = { version = "1", features = ["full"] }  # Async runtime

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
